make code like oop

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "types": [
       "./types",
       "@types/node",
+      "@zsmartex/z-type",
       "@zsmartex/z-store",
       "webpack-env"
     ],
