--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@zsmartex/z-apiclient": "^1.0.2",
     "@zsmartex/z-eventbus": "^1.0.2",
-    "@zsmartex/z-helpers": "^1.1.9",
+    "@zsmartex/z-helpers": "^1.2.4",
     "@zsmartex/z-store": "^2.0.3",
     "accessible-nprogress": "^2.0.1",
-    "ant-design-vue": "^1.5.4",
+    "ant-design-vue": "^1.6.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "cube-ui": "^1.12.38",
@@ -29,7 +29,7 @@
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-class-component": "^7.2.3",
-    "vue-i18n": "^8.17.4",
+    "vue-i18n": "^8.17.7",
     "vue-property-decorator": "^8.4.2",
     "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.1.6",
@@ -43,6 +43,7 @@
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "@vue/preload-webpack-plugin": "^1.1.1",
+    "babel-plugin-import": "^1.13.0",
     "compression-webpack-plugin": "^3.1.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "less": "^3.0.4",
@@ -52,7 +53,7 @@
     "sass-loader": "^8.0.2",
     "speed-measure-webpack-plugin": "^1.3.3",
     "terser-webpack-plugin": "^3.0.0",
-    "typescript": "~3.8.3",
+    "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11",
     "webpack-bundle-analyzer": "^3.7.0",
     "webpack-transform-modules-plugin": "^0.4.4"
