fix sparkline, mobile, depth, add support 404 page

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@zsmartex/z-apiclient": "^1.0.3",
     "@zsmartex/z-eventbus": "^1.0.2",
     "@zsmartex/z-helpers": "^1.2.10",
-    "@zsmartex/z-store": "^2.1.15",
+    "@zsmartex/z-store": "^2.1.19",
     "@zsmartex/z-types": "^1.10.3",
     "accessible-nprogress": "^2.0.1",
     "ant-design-vue": "^1.6.0",
@@ -64,6 +64,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^1.19.1",
+    "resize-observer-polyfill": "^1.5.1",
     "speed-measure-webpack-plugin": "^1.3.3",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
