--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "types": [
       "./types",
       "@types/node",
-      "@zsmartex/z-type",
+      "@zsmartex/z-types",
       "@zsmartex/z-store",
       "webpack-env"
     ],
