--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@grainrigi/vue-fragment": "^1.5.1",
     "@types/uuid": "^8.0.0",
     "@vue/composition-api": "^1.0.0-beta.18",
-    "@zsmartex/klinecharts": "5.3.7",
-    "@zsmartex/z-apiclient": "^1.0.7",
-    "@zsmartex/z-eventbus": "^1.0.2",
-    "@zsmartex/z-helpers": "^1.2.36",
-    "@zsmartex/z-store": "^2.2.30",
-    "@zsmartex/z-types": "^1.10.13",
+    "@zsmartex/z-apiclient": "git+https://gitlab.com/zsmartex/z-apiclient.git",
+    "@zsmartex/z-eventbus": "git+https://gitlab.com/zsmartex/z-eventbus.git",
+    "@zsmartex/z-helpers": "git+https://gitlab.com/zsmartex/z-helpers.git",
+    "@zsmartex/z-store": "git+https://gitlab.com/zsmartex/z-store.git",
+    "@zsmartex/z-types": "git+https://gitlab.com/zsmartex/z-types.git",
+    "@zsmartex/klinecharts": "git+https://github.com/zsmartex/KLineChart.git",
     "accessible-nprogress": "^2.0.1",
     "ant-design-vue": "^1.6.0",
     "axios": "^0.19.2",
