--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@grainrigi/vue-fragment": "^1.5.1",
     "@types/uuid": "^8.0.0",
     "@vue/composition-api": "^1.0.0-beta.18",
+    "@zsmartex/klinecharts": "git+https://github.com/zsmartex/KLineChart.git",
     "@zsmartex/z-apiclient": "git+https://gitlab.com/zsmartex/z-apiclient.git#20733a0be217063cd8694e78f2a34a180eb99000",
     "@zsmartex/z-eventbus": "git+https://gitlab.com/zsmartex/z-eventbus.git",
     "@zsmartex/z-helpers": "git+https://gitlab.com/zsmartex/z-helpers.git",
     "@zsmartex/z-store": "git+https://gitlab.com/zsmartex/z-store.git",
-    "@zsmartex/z-types": "git+https://gitlab.com/zsmartex/z-types.git#dbe05dfb232b7ac13e48f90536ff580be214cd1e",
-    "@zsmartex/klinecharts": "git+https://github.com/zsmartex/KLineChart.git",
+    "@zsmartex/z-types": "git+https://gitlab.com/zsmartex/z-types.git#a8cc580b90c544633e823d20a3f40b738d3a337a",
     "accessible-nprogress": "^2.0.1",
     "ant-design-vue": "^1.6.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "countries-list": "^2.6.1",
     "cube-ui": "^1.12.39",
     "hidpi-canvas": "^1.0.10",
     "node-sass": "^4.14.1",
