use npm private package

--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@types/uuid": "^8.0.0",
     "@vue/composition-api": "^1.0.0-beta.18",
     "@zsmartex/klinecharts": "git+https://github.com/zsmartex/KLineChart.git",
-    "@zsmartex/z-apiclient": "git+https://gitlab.com/zsmartex/z-apiclient.git#20733a0be217063cd8694e78f2a34a180eb99000",
-    "@zsmartex/z-eventbus": "git+https://gitlab.com/zsmartex/z-eventbus.git",
-    "@zsmartex/z-helpers": "git+https://gitlab.com/zsmartex/z-helpers.git",
-    "@zsmartex/z-store": "git+https://gitlab.com/zsmartex/z-store.git",
-    "@zsmartex/z-types": "git+https://gitlab.com/zsmartex/z-types.git#a8cc580b90c544633e823d20a3f40b738d3a337a",
+    "@zsmartex/z-apiclient": "1.0.8",
+    "@zsmartex/z-eventbus": "1.0.2",
+    "@zsmartex/z-helpers": "1.2.37",
+    "@zsmartex/z-store": "2.2.30",
+    "@zsmartex/z-types": "1.10.14",
     "accessible-nprogress": "^2.0.1",
     "ant-design-vue": "^1.6.0",
     "axios": "^0.19.2",
