done mobile view

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@grainrigi/vue-fragment": "^1.5.1",
     "@types/uuid": "^8.0.0",
     "@vue/composition-api": "^1.0.0-beta.18",
-    "@zsmartex/klinecharts": "git+https://github.com/zsmartex/KLineChart.git",
     "@zsmartex/z-apiclient": "1.0.8",
     "@zsmartex/z-eventbus": "1.0.2",
     "@zsmartex/z-helpers": "1.2.37",
@@ -28,6 +27,7 @@
     "countries-list": "^2.6.1",
     "cube-ui": "^1.12.39",
     "hidpi-canvas": "^1.0.10",
+    "klinecharts": "^7.1.0",
     "node-sass": "^4.14.1",
     "phone": "^2.4.11",
     "qr.js": "^0.0.0",
