--- a/nginx.conf
+++ b/nginx.conf
@@ -40,13 +40,16 @@ server {
     text/x-component
     text/x-cross-domain-policy;
 
+    root   /usr/share/nginx/html;
+    index  index.html;
+
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html;
-        try_files $uri $uri/ /index.html?/$request_uri;
-        sendfile  on;
-        sendfile_max_chunk 1m;
-        tcp_nopush on;
-        gzip_static on;
+        try_files $uri $uri/ /index.html;
+
+        add_header Last-Modified $date_gmt;
+        add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+        if_modified_since off;
+        expires off;
+        etag off;
     }
 }
