--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name": "ZSmart - Cryptocurrency Exchange",
-  "short_name": "ZSmart",
+  "name": "XUMExchange - Cryptocurrency Exchange",
+  "short_name": "XUMExchange",
   "icons": [
     {
-      "src": "/img/icons/android-chrome-192x192.png",
+      "src": "/img/icons/logo-1.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/img/icons/android-chrome-512x512.png",
+      "src": "/img/icons/logo-1.png",
       "sizes": "512x512",
       "type": "image/png"
     }
