Changed project theme

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ZSmart - Cryptocurrency Exchange",
-  "short_name": "ZSmart",
+  "name": "SmartChainers - Cryptocurrency Exchange",
+  "short_name": "SmartChainers",
   "icons": [
     {
       "src": "/img/icons/android-chrome-192x192.png",
