Modified titlebar text

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "SmartChainers - Cryptocurrency Exchange",
-  "short_name": "SmartChainers",
+  "name": "XUM - Cryptocurrency Exchange",
+  "short_name": "XUM",
   "icons": [
     {
       "src": "/img/icons/logo-1.png",
