--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "qr.js": "^0.0.0",
     "recaptcha-v3": "^1.9.1",
     "register-service-worker": "^1.7.1",
+    "resize-observer": "^1.0.2",
     "sass-loader": "^8.0.2",
     "swiper": "^5.4.1",
     "v-click-outside-x": "^4.1.0",
     "vue": "^2.6.12",
     "vue-awesome-swiper": "^4.1.1",
     "vue-class-component": "^7.2.3",
-    "vue-i18n": "^8.17.7",
+    "vue-i18n": "^8.25.0",
     "vue-property-decorator": "^8.4.1",
     "vue-recaptcha": "^1.3.0",
     "vue-recaptcha-v3": "^2.0.1",
@@ -49,15 +50,15 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.5",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "@vue/cli-plugin-babel": "~4.5.9",
-    "@vue/cli-plugin-eslint": "~4.5.9",
-    "@vue/cli-plugin-pwa": "~4.5.9",
-    "@vue/cli-plugin-router": "~4.5.9",
-    "@vue/cli-plugin-typescript": "~4.5.9",
-    "@vue/cli-plugin-vuex": "~4.5.9",
-    "@vue/cli-service": "~4.5.9",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/cli-plugin-pwa": "~4.5.13",
+    "@vue/cli-plugin-router": "~4.5.13",
+    "@vue/cli-plugin-typescript": "~4.5.13",
+    "@vue/cli-plugin-vuex": "~4.5.13",
+    "@vue/cli-service": "~4.5.13",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/preload-webpack-plugin": "^1.1.2",
@@ -71,12 +72,11 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^1.19.1",
-    "resize-observer-polyfill": "^1.5.1",
     "speed-measure-webpack-plugin": "^1.3.3",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "terser-webpack-plugin": "^3.0.1",
-    "typescript": "~3.8.3",
+    "typescript": "~4.3.5",
     "vue-template-compiler": "^2.6.11",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-post-compile-plugin": "^1.0.0",
