--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,7 @@ build:
   stage: build
   services:
     - docker:19.03.12-dind
-  variables:
-    IMAGE_TAG: coverapp:$CI_COMMIT_REF_SLUG
   script:
     - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
-    - docker build -t $IMAGE_TAG --build-arg NPM_TOKEN=${NPM_TOKEN} .
-    - docker push $IMAGE_TAG
+    - docker build -t coverapp --build-arg NPM_TOKEN=${NPM_TOKEN} .
+    - docker push coverapp
