--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,5 +5,5 @@ build:
     - docker:19.03.12-dind
   script:
     - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
-    - docker build -t coverapp --build-arg NPM_TOKEN=${NPM_TOKEN} .
-    - docker push coverapp
+    - docker build -t zsmartex/coverapp --build-arg NPM_TOKEN=${NPM_TOKEN} .
+    - docker push zsmartex/coverapp
