--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cube-ui": "^1.12.39",
     "hidpi-canvas": "^1.0.10",
     "klinecharts": "^7.1.0",
+    "konva": "^8.1.3",
     "node-sass": "^4.14.1",
     "phone": "^2.4.11",
     "qr.js": "^0.0.0",
@@ -41,6 +42,7 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.25.0",
+    "vue-konva": "^2.1.7",
     "vue-property-decorator": "^8.4.1",
     "vue-recaptcha": "^1.3.0",
     "vue-recaptcha-v3": "^2.0.1",
