--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^3.6.5",
     "countries-list": "^2.6.1",
     "cube-ui": "^1.12.39",
+    "decimal.js": "^10.3.1",
     "hidpi-canvas": "^1.0.10",
     "klinecharts": "^7.1.0",
     "konva": "^8.1.3",
