--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hidpi-canvas": "^1.0.10",
     "klinecharts": "^7.1.0",
     "konva": "^8.1.3",
+    "mobile-device-detect": "^0.4.3",
     "node-sass": "^4.14.1",
     "phone": "^2.4.11",
     "qr.js": "^0.0.0",
@@ -34,10 +35,12 @@
     "sass-loader": "^8.0.2",
     "swiper": "^5.4.1",
     "v-click-outside-x": "^4.1.0",
-    "vue": "^2.6.12",
+    "vue": "^2.6.14",
     "vue-awesome-swiper": "^4.1.1",
     "vue-class-component": "^7.2.3",
+    "vue-cryptoicon": "^0.18.0-a",
     "vue-i18n": "^8.25.0",
+    "vue-number-format": "^1.2.0",
     "vue-property-decorator": "^8.4.1",
     "vue-recaptcha": "^1.3.0",
     "vue-recaptcha-v3": "^2.0.1",
